--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "teamones/stomp-queue": "^0.1.4",
     "vlucas/phpdotenv": "^5.4",
     "illuminate/redis": "^8.83",
-    "predis/predis": "^1.1"
+    "predis/predis": "^1.1",
+    "topthink/think-validate": "^2.0"
   },
   "suggest": {
     "ext-event": "For better performance. "
