增加ide提示包，和错误码生成 以及多语言出来

--- a/composer.json
+++ b/composer.json
@@ -64,5 +64,8 @@
     "pre-package-uninstall": [
       "support\\Plugin::uninstall"
     ]
+  },
+  "require-dev": {
+    "kriss/webman-eloquent-ide-helper": "^1.0"
   }
 }
